maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:45: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x,y-1,cpt)
                ^JediEscaper:49: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x,y-1,cpt)
                ^JediEscaper:55: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x-1,y,cpt)
                ^JediEscaper:59: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x-1,y,cpt)
                ^JediEscaper:66: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x+1,y,cpt)
                  ^JediEscaper:70: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x+1,y,cpt)
                  ^JediEscaper:78: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x,y+1,cpt)
                  ^JediEscaper:82: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x,y+1,cpt)
                  ^